加入photoshop.ts.d静态检查

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "compilerOptions": {
         "preserveConstEnums": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "lib": ["es5"], // exclude DOM and ScriptHost
+        "types": ["./node_modules/photoshop.d.ts/dist/cc"]
     },
     "files": [
         "src/main.ts",
