整理设置项部分源码，避免由undefined引发的错误；开启typescipt的strictNullChecks、strictPropertyInitialization检查

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "preserveConstEnums": true,
         "sourceMap": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true,
         "lib": ["es5"], // exclude DOM and ScriptHost
         "types": ["./node_modules/photoshop.d.ts/dist/cc"]
     },
