去除flatten后脚本中的注释，减小文件体积；关闭typescript的removeComments选项

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "preserveConstEnums": true,
         "sourceMap": true,
+        "removeComments": false,
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
         "lib": ["es5"], // exclude DOM and ScriptHost
