--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "removeComments": false,
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
+        "noFallthroughCasesInSwitch": true,
         "lib": ["es5"], // exclude DOM and ScriptHost
         "types": ["./node_modules/photoshop.d.ts/dist/cc"]
     },
